changing control flow:
Previously, the last participant would receive a response with "all participants are ready" at which point it would
notify the realtime server which notifies the experimenter which notifies the django server to move to the next round

Now, participants just signal that they are ready to the django server and realtime server.  Every time the experimenter
receives a realtime participant_ready event it polls the check-ready-participants endpoint to see if all the
participants are ready and if so, advances to the next round.

The ideal situation would still be for the django server to advance the round directly and then tell the sockjs server
to update all connected clients.

TODO: wire up boundaries submit decision endpoint to set up participant_ready properly

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -446,9 +446,11 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                     console.debug(response);
                     model.readyParticipants(response.number_of_ready_participants);
                     getWebSocket().send(createMessageEvent("Participant finished reading instructions", "client_ready"));
+                    /*
                     if (response.all_participants_ready) {
                         getWebSocket().send(createAllParticipantsReadyEvent());
                     }
+                    */
                     model.activateTemplate("WAITING_ROOM");
                 });
             }
@@ -509,10 +511,12 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                     console.log(response);
                     // FIXME: this is dangerous, could potentially lead to advancing rounds multiple times if something
                     // haywire in the participant.  Should only be activatable by the Experimenter.
+                    /*
                     console.log("all participants ready?");
                     if (response.all_participants_submitted) {
                         getWebSocket().send(createAllParticipantsReadyEvent());
                     }
+                    */
                     model.update($.parseJSON(response.experimentModelJson));
                     // FIXME: forward the response message to the chat window should be handled completely on the server
                     // side instead of ping-ponging to the client side back to the real time server back out to all
@@ -589,7 +593,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                         experimentModel.update();
                         break;
                     case 'participant_ready':
-                        $.get('/experiment/{{experiment.pk}}/ready-participants', function(response) {
+                        $.get('/experiment/{{experiment.pk}}/check-ready-participants', function(response) {
                             experimentModel.readyParticipants(response.number_of_ready_participants);
                         });
                         break;
