--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -5,8 +5,8 @@ function createConnectionEvent() {
 function createReconnectionEvent() {
     return createMessageEvent("Reconnecting from disconnect", "reconnect");
 }
-function createAllParticipantsReadyEvent() {
-    return createMessageEvent("All participants ready", "all_participants_ready");
+function createReadyEvent(message) {
+    return createMessageEvent(message, "participant_ready");
 }
 function createMessageEvent(payload, event_type) {
     if (! event_type) {
