--- a/vcweb/broker/templates/broker/participate.html
+++ b/vcweb/broker/templates/broker/participate.html
@@ -22,8 +22,8 @@
         <div>
             Please wait. The experiment will continue shortly once all the participants are ready.
             <p>
-            <span class='badge' data-bind='css: { "badge-important": readyParticipants() < (totalNumberOfParticipants() / 2), "badge-success": readyParticipants() > (totalNumberOfParticipants() / 2)}, text: readyParticipants'></span>
-                of <span class='badge badge-success' data-bind='text: totalNumberOfParticipants'></span> participants
+            <span class='badge' data-bind='css: { "badge-important": readyParticipants() < (participantCount() / 2), "badge-success": readyParticipants() > (participantCount() / 2)}, text: readyParticipants'></span>
+                of <span class='badge badge-success' data-bind='text: participantCount'></span> participants
                 are ready.
             </p>
         </div>
@@ -185,8 +185,7 @@
                 <a href='javascript:void();' data-bind='click: activateInstructionsPageTwo'>Back</a>
             </li>
             <li class='next'>
-                <a href='javascript: void();' data-bind='click: participantReady'>I have fully read and understand
-                    these instructions</a>
+                <a href='javascript: void();' data-bind='click: participantReady.bind($data, "Finished instructions")'>I have fully read and understand these instructions</a>
             </li>
         </ul>
     </script>
@@ -441,7 +440,7 @@
             var self = this;
             var model = ko.mapping.fromJS(experimentModelJson);
             model.readyParticipantsPercentage = ko.computed(function () {
-                return (model.readyParticipants() / model.totalNumberOfParticipants()) * 100;
+                return (model.readyParticipants() / model.participantCount()) * 100;
             });
             model.activateWaitingRoomPage = function () {
                 console.debug("activating waiting room page");
@@ -466,8 +465,9 @@
                 console.debug("form data: ");
                 console.debug(formData);
                 $.post('submit-chat-preferences', formData, function(response) {
-                    console.debug("received response");
+                    console.debug("chat preferences response");
                     console.debug(response);
+                    $('#chatPreferencesForm').hide();
                 });
             };
             model.isTimeOut = ko.observable(0)
@@ -611,14 +611,14 @@
             model.networkStructure = ko.observable("{{STATIC_URL}}images/broker/SES.jpg");
             model.networkStructureImageWidth = ko.observable("600px");
             model.networkStructureImageHeight = ko.observable("80px");
-            model.checkReadyParticipants = function () {
+            model.checkReadyParticipants = function() {
                 $.get('/experiment/check-ready-participants', { participant_group_id: model.participantGroupId() }, function (response) {
                     model.readyParticipants(response.number_of_ready_participants);
                 });
             }
-            model.participantReady = function () {
+            model.participantReady = function(message) {
                 $.post('/experiment/participant-ready', { participant_group_id: model.participantGroupId() }, function (response) {
-                    getWebSocket().send(createReadyEvent("Participant finished reading instructions"));
+                    getWebSocket().send(createReadyEvent(message));
                     model.readyParticipants(response.number_of_ready_participants);
                     model.activateWaitingRoomPage();
                 });
@@ -704,20 +704,17 @@
                 switch (data.event_type) {
                     case 'chat':
                         experimentModel.withinGroupChatMessages.unshift(data);
-                    break;
+                        break;
                     case 'update':
                         console.debug("updating view model");
                         experimentModel.update();
                         break;
                     case 'participant_ready':
-                        experimentModel.readyParticipants(Math.min(experimentModel.totalNumberOfParticipants(), experimentModel.readyParticipants() + 1));
-                    // FIXME: replace with this later
-                    // experimentModel.checkReadyParticipants();
-                    break;
-
+                        experimentModel.checkReadyParticipants();
+                        break;
                     default:
                         console.debug("unhandled json message:" + json);
-                    break;
+                        break;
                 }
             };
         }
