--- a/vcweb/broker/templates/broker/participate.html
+++ b/vcweb/broker/templates/broker/participate.html
@@ -498,13 +498,13 @@
                     element: "#harvestDecisionId",
                     title: "Here's where you insert your harvesting decision",
                     content: "For this practice round, go ahead and put 6 hours into harvesting. Each round you will have a maximum of 6  minute to make a harvest decision.", /* content of the popover */
-                    placement: "right"
+                    placement: "top"
                 });
                 tourFirst.addStep({
                     element: "#conservationDecision",
                     title: "Your conservation decision",
                     content: "Note that the rest of your available hours will be put into conservation.",
-                    placement: "right"
+                    placement: "bottom"
                 });
                 tourFirst.addStep({
                     element: "#submitDecision",
