--- a/vcweb/static/css/boundaries/style.css
+++ b/vcweb/static/css/boundaries/style.css
@@ -24,7 +24,7 @@
 }
 .boundaries-status-dashboard {
     height: 100px;
-    min-width: 80px;
+    width: 110px;
     margin-right: 0px;
     padding: 8px 8px 8px 8px;
 }
