fixing a bug where regrowth wasn't being calculated if no one harvested
adding waitThirtySeconds property to a bloated view model

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -557,7 +557,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                     model.setCurrentInterval(
                         setInterval(function() {
                             model.tick();
-                            if (model.secondsLeft() > 30 && ! model.isPracticeRound()) {
+                            if (model.secondsLeft() > 30 && model.waitThirtySeconds()) {
                                 model.disableHarvestForm();
                             }
                             else {
